[package]
name = "hypr-empty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs", branch = "master" }
serde = { version = "1.0.159", features = ["derive"] }
toml = "0.7.3"
